feat: 添加 JVM 参数以启用对 SQLite JDBC 的 native access 支持